--- a/index.html
+++ b/index.html
@@ -1,45 +1,85 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio - Malika Ait Larbi</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <title>Malika Ait Larbi | Electrical Engineering Student</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
+
+<header>
     <h1>Malika Ait Larbi</h1>
-    <p>Étudiante ingénieure en Génie Électrique | ENSA Oujda</p>
-  </header>
+    <p>Final-Year Electrical Engineering Student</p>
 
-  <section id="about">
-    <h2>À propos de moi</h2>
-    <p>Je suis passionnée par l’électricité, l’innovation et le développement durable. Je recherche un stage de fin d’études de 6 mois à partir de février.</p>
-  </section>
+    <div class="header-buttons">
+        <a href="CV_Malika_Ait_Larbi.pdf" class="btn" target="_blank">Download CV</a>
+        <a href="#contact" class="btn-outline">Contact Me</a>
+    </div>
+</header>
 
-  <section id="education">
-    <h2>Formation</h2>
-    <ul>
-      <li>2022–2025 : ENSA Oujda – Génie Électrique</li>
-      <li>2020–2022 : Classes préparatoires intégrées</li>
-    </ul>
-  </section>
+<section>
+    <h2>Profile</h2>
+    <p>
+        Final-year engineering student in Electrical Engineering, seeking a
+        <strong>Final Year Project Internship (PFE)</strong>.
+        Strong interest in electric vehicles, battery management systems,
+        renewable energy and intelligent control systems.
+    </p>
+</section>
 
-  <section id="experience">
-    <h2>Expériences</h2>
-    <p><strong>OCP Group – Jorf Lasfar</strong> : Amélioration de la fiabilité des batteries industrielles.</p>
-  </section>
+<section>
+    <h2>Technical Skills</h2>
+    <div class="skills">
+        <span>Electrical Engineering</span>
+        <span>Power Electronics</span>
+        <span>Electric Vehicles</span>
+        <span>Battery Management System (BMS)</span>
+        <span>MATLAB / Simulink</span>
+        <span>Python</span>
+        <span>C Programming</span>
+        <span>Signal Processing (DSP)</span>
+    </div>
+</section>
 
-  <section id="projects">
-    <h2>Projets</h2>
-    <ul>
-      <li>Conception d’un système de surveillance de consommation d’énergie basé sur l’IoT.</li>
-      <li>Simulation d’un véhicule hybride sur MATLAB/Simulink.</li>
-    </ul>
-  </section>
+<section>
+    <h2>Academic Projects</h2>
 
-  <footer>
-    <p>📧 malika.aitlarbi@gmail.com | 💼 <a href="https://linkedin.com/in/malika-ait-larbi" target="_blank">LinkedIn</a></p>
-  </footer>
+    <div class="project">
+        <h3>Battery Management System for EVs</h3>
+        <p>
+            Modeling and simulation of a BMS including SOC/SOH estimation,
+            cell balancing and performance analysis using MATLAB/Simulink.
+        </p>
+    </div>
+
+    <div class="project">
+        <h3>Solar Charging Station</h3>
+        <p>
+            Design and analysis of a solar-powered charging station
+            for electric bikes and scooters.
+        </p>
+    </div>
+
+    <div class="project">
+        <h3>Digital Signal Processing on DSP</h3>
+        <p>
+            Spectral analysis, FFT implementation and signal processing
+            applications using DSP TMS320C6713.
+        </p>
+    </div>
+</section>
+
+<section id="contact">
+    <h2>Contact Information</h2>
+    <p>Email : <a href="mailto:malika.aitlarbi@email.com">malika.aitlarbi@email.com</a></p>
+    <p>LinkedIn : <a href="#">linkedin.com/in/malika-ait-larbi</a></p>
+    <p>GitHub : <a href="#">github.com/malikaaitlarbi</a></p>
+</section>
+
+<footer>
+    <p>© 2026 Malika Ait Larbi | Engineering Portfolio</p>
+</footer>
+
 </body>
 </html>
