--- a/index.html
+++ b/index.html
@@ -1,85 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <title>Malika Ait Larbi | Electrical Engineering Student</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <title>AIT-LARBI MALIKA | Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<header>
-    <h1>Malika Ait Larbi</h1>
-    <p>Final-Year Electrical Engineering Student</p>
+  <section class="hero">
+    <div class="content">
+      <h1 class="fade-in">AIT-LARBI <span>MALIKA</span></h1>
 
-    <div class="header-buttons">
-        <a href="CV_Malika_Ait_Larbi.pdf" class="btn" target="_blank">Download CV</a>
-        <a href="#contact" class="btn-outline">Contact Me</a>
+      <h2 class="typing">Génie Électrique</h2>
+
+      <p class="fade-up">
+        Étudiante ingénieure en génie électrique, passionnée par
+        l’énergie, les véhicules électriques et l’intelligence artificielle.
+        À la recherche d’un stage PFE pour mettre en pratique mes compétences.
+      </p>
+
+      <div class="buttons fade-up">
+        <a href="https://www.linkedin.com" target="_blank" class="btn">LinkedIn</a>
+        <a href="CV_Malika_Ait_Larbi.pdf" class="btn">Download CV</a>
+        <a href="https://github.com" target="_blank" class="btn">GitHub</a>
+      </div>
     </div>
-</header>
-
-<section>
-    <h2>Profile</h2>
-    <p>
-        Final-year engineering student in Electrical Engineering, seeking a
-        <strong>Final Year Project Internship (PFE)</strong>.
-        Strong interest in electric vehicles, battery management systems,
-        renewable energy and intelligent control systems.
-    </p>
-</section>
-
-<section>
-    <h2>Technical Skills</h2>
-    <div class="skills">
-        <span>Electrical Engineering</span>
-        <span>Power Electronics</span>
-        <span>Electric Vehicles</span>
-        <span>Battery Management System (BMS)</span>
-        <span>MATLAB / Simulink</span>
-        <span>Python</span>
-        <span>C Programming</span>
-        <span>Signal Processing (DSP)</span>
-    </div>
-</section>
-
-<section>
-    <h2>Academic Projects</h2>
-
-    <div class="project">
-        <h3>Battery Management System for EVs</h3>
-        <p>
-            Modeling and simulation of a BMS including SOC/SOH estimation,
-            cell balancing and performance analysis using MATLAB/Simulink.
-        </p>
-    </div>
-
-    <div class="project">
-        <h3>Solar Charging Station</h3>
-        <p>
-            Design and analysis of a solar-powered charging station
-            for electric bikes and scooters.
-        </p>
-    </div>
-
-    <div class="project">
-        <h3>Digital Signal Processing on DSP</h3>
-        <p>
-            Spectral analysis, FFT implementation and signal processing
-            applications using DSP TMS320C6713.
-        </p>
-    </div>
-</section>
-
-<section id="contact">
-    <h2>Contact Information</h2>
-    <p>Email : <a href="mailto:malika.aitlarbi@email.com">malika.aitlarbi@email.com</a></p>
-    <p>LinkedIn : <a href="#">linkedin.com/in/malika-ait-larbi</a></p>
-    <p>GitHub : <a href="#">github.com/malikaaitlarbi</a></p>
-</section>
-
-<footer>
-    <p>© 2026 Malika Ait Larbi | Engineering Portfolio</p>
-</footer>
+  </section>
 
 </body>
 </html>
