--- a/index.html
+++ b/index.html
@@ -1,32 +1,69 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <title>AIT-LARBI MALIKA | Portfolio</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Malika Ait Larbi | Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <section class="hero">
-    <div class="content">
-      <h1 class="fade-in">AIT-LARBI <span>MALIKA</span></h1>
+<header>
+    <h1>Malika Ait Larbi</h1>
+    <p>Étudiante ingénieure en Génie Électrique</p>
+    <a href="#contact" class="btn">Me contacter</a>
+</header>
 
-      <h2 class="typing">Génie Électrique</h2>
+<section id="about">
+    <h2>À propos de moi</h2>
+    <p>
+        Étudiante en dernière année du cycle d’ingénieur en génie électrique,
+        je suis à la recherche d’un stage de fin d’études (PFE).
+        Passionnée par les systèmes électriques, les énergies renouvelables
+        et les véhicules électriques.
+    </p>
+</section>
 
-      <p class="fade-up">
-        Étudiante ingénieure en génie électrique, passionnée par
-        l’énergie, les véhicules électriques et l’intelligence artificielle.
-        À la recherche d’un stage PFE pour mettre en pratique mes compétences.
-      </p>
+<section id="skills">
+    <h2>Compétences</h2>
+    <ul>
+        <li>⚡ Génie électrique</li>
+        <li>🔋 Batteries & véhicules électriques</li>
+        <li>📊 Matlab / Simulink</li>
+        <li>💻 Python, C</li>
+        <li>🧠 Intelligence artificielle appliquée</li>
+    </ul>
+</section>
 
-      <div class="buttons fade-up">
-        <a href="https://www.linkedin.com" target="_blank" class="btn">LinkedIn</a>
-        <a href="CV_Malika_Ait_Larbi.pdf" class="btn">Download CV</a>
-        <a href="https://github.com" target="_blank" class="btn">GitHub</a>
-      </div>
+<section id="projects">
+    <h2>Projets académiques</h2>
+
+    <div class="project">
+        <h3>🔋 BMS pour véhicules électriques</h3>
+        <p>Modélisation et simulation d’un système de gestion de batterie (SOC, SOH, équilibrage).</p>
     </div>
-  </section>
+
+    <div class="project">
+        <h3>🌞 Borne de recharge solaire</h3>
+        <p>Conception d’une borne de recharge pour vélos et trottinettes électriques.</p>
+    </div>
+
+    <div class="project">
+        <h3>⚙️ Traitement du signal (DSP)</h3>
+        <p>Analyse spectrale, FFT et implémentation sur DSP TMS320C6713.</p>
+    </div>
+</section>
+
+<section id="contact">
+    <h2>Contact</h2>
+    <p>Email : <a href="mailto:malika.aitlarbi@email.com">malika.aitlarbi@email.com</a></p>
+    <p>LinkedIn : <a href="#">linkedin.com/in/malika-ait-larbi</a></p>
+    <p>GitHub : <a href="#">github.com/malikaaitlarbi</a></p>
+</section>
+
+<footer>
+    <p>© 2026 Malika Ait Larbi — Portfolio</p>
+</footer>
 
 </body>
 </html>
